Backported r92842 from trunk.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_14/madman/Rpacks/minet@93451 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+minet_3.20.1
+      -c++ validate bug correction
+      -using namespace std
+      -dup = false 
+      -now imports infotheo
 minet_1.1.1 
       - a vignette minet.Rnw has been added
 minet_1.1.2
